deployment/ingress-book-store.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: dev
  name: ingress-book-store
spec:
  rules:
    - http:
        paths:
          - path: /users
            backend:
              serviceName: svc-user-service
              servicePort: 80
